scripts/nullaway/wpi/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8.txt
../wpi/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/utils/encoder/EncoderHelper.java:33: error: [NullAway] dereferenced expression captcha is @Nullable
        ImageIO.write(captcha.getImage(), format, os);
                             ^
    (see http://t.uber.com/nullaway )
../wpi/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/demo/PatchcaFilterDemo.java:93: error: [NullAway] dereferenced expression cs.getCaptcha() is @Nullable
        img = cs.getCaptcha().getImage();
                             ^
    (see http://t.uber.com/nullaway )
../wpi/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/text/renderer/AbstractTextRenderer.java:88: error: [NullAway] dereferenced expression fontFactory is @Nullable
            Font font = fontFactory.getFont(i);
                                   ^
    (see http://t.uber.com/nullaway )
../wpi/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/text/renderer/AbstractTextRenderer.java:102: error: [NullAway] dereferenced expression colorFactory is @Nullable
            tc.setColor(colorFactory.getColor(i));
                                    ^
    (see http://t.uber.com/nullaway )
../wpi/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/AbstractFilterFactory.java:34: error: [NullAway] enhanced-for expression getFilters() is @Nullable
        for (BufferedImageOp filter : getFilters()) {
                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/library/CurvesImageOp.java:118: error: [NullAway] dereferenced expression colorFactory is @Nullable
            g2.setColor(colorFactory.getColor(i));
                                    ^
    (see http://t.uber.com/nullaway )
6 errors
